--- a/.github/workflows/get_trial.yml
+++ b/.github/workflows/get_trial.yml
@@ -22,6 +22,9 @@ jobs:
           python-version: '3.10'
       - name: Prepare
         run: pip install requests beautifulsoup4 ruamel.yaml json5 pyyaml
+      - name: 运行 Python 脚本
+        run: |
+          python list.py
       - name: Run get_trial.py
         run: python get_trial.py
       - name: Commit
