--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -1,136 +1,197 @@
 name: Collect List and Auto Update
 
 on:
-  workflow_dispatch: # 允许手动触发
-  #schedule:
-   # - cron: '0 3 * * *' # 每天凌晨3点 (UTC) 运行 list 部分；AutoUpdate 部分每小时运行，但由于顺序，可调整为更保守的 cron
+  workflow_dispatch:  # 允许手动触发
+  schedule:
+    - cron: '0 3 * * *'  # 每天凌晨3点 (UTC) 运行
 
 permissions: write-all
 
 jobs:
-  collect-and-update:
+  collect-list:
     runs-on: ubuntu-latest
-    timeout-minutes: 120
+    timeout-minutes: 60
     env:
       TZ: Asia/Shanghai
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       DDAL_EMAIL: ${{ secrets.DDAL_EMAIL }}
       DDAL_PASSWORD: ${{ secrets.DDAL_PASSWORD }}
-      REPO: ${{ secrets.REPO }} # 远程仓库，如 moneyfly1/output-repo
-      REPO_TOKEN: ${{ secrets.REPO_TOKEN }} # 远程仓库的 PAT token
+      REPO: ${{ secrets.REPO }}  # 如 moneyfly1/output-repo
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}  # PAT with repo permissions
 
     steps:
-      # 第一阶段：收集列表（原 list.yml 逻辑）
-      - name: 检出代码
+      - name: 检出代码（当前仓库）
         uses: actions/checkout@v4
 
-      - name: 设置 Python 环境 (for list)
+      - name: 设置 Python 环境
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
 
-      - name: 安装依赖 (for list)
+      - name: 安装依赖
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
       - name: 运行 list.py (收集并更新 trial.cfg)
+        run: python list.py
+
+      - name: Debug remote repo access
         run: |
-          python list.py
-
-      - name: Commit and push trial.cfg (only if changed)
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git stash push -m "local changes" || true
-          git pull origin main --rebase || true
-          git stash pop || true
-          git add trial.cfg
-          if [[ -n $(git status -s trial.cfg) ]]; then
-            git commit -m "update trial.cfg: $(date +%Y-%m-%d" "%H:%M:%S)"
-            git push origin main
-          else
-            echo "No changes to trial.cfg, skipping commit."
-          fi
-
-      # 第二阶段：Auto Update（原 AutoUpdate.yml 逻辑，使用本地 trial.cfg）
-      - name: 设置 Python 环境 (for get_trial)
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: 安装依赖 (for get_trial)
-        run: pip install requests beautifulsoup4 ruamel.yaml json5 pyyaml
-
-      - name: Run get_trial.py (使用本地 trial.cfg，输出成功域名)
-        run: |
-          # 无需 TRIAL_CFG_URL，因为 list 后有本地 trial.cfg
-          python get_trial.py --output-dir ./
-
-      # 可选：保存成功域名到文件（如果需要 push 成功域名而非 trial）
-      - name: Prepare success domains for push
-        run: |
-          # 如果要 push 成功域名列表到远程仓库
-          # cp success_domains.txt ../success_domains.txt  # 示例，调整路径
-          echo "成功域名文件: success_domains.txt 和 success_domains.json 已生成"
+          echo "REPO value: ${{ env.REPO }}"
+          git ls-remote https://x-access-token:${{ env.REPO_TOKEN }}@github.com/${{ env.REPO }}.git HEAD || echo "❌ ls-remote failed: 检查 REPO_TOKEN 或分支 main"
 
       - name: Checkout remote repository
-        uses: actions/checkout@v3
+        id: checkout-remote
+        continue-on-error: true
+        uses: actions/checkout@v4
         with:
           repository: ${{ env.REPO }}
           token: ${{ env.REPO_TOKEN }}
           path: temp-repo
-          ref: master
+          ref: main  # 远程仓库默认分支
+          persist-credentials: true
 
-      - name: Push to remote repo (trial + success domains)
+      - name: Check checkout status
+        if: steps.checkout-remote.outcome != 'success'
+        run: |
+          echo "❌ Checkout remote repo failed. Skipping push trial.cfg."
+          exit 0
+
+      - name: Push trial.cfg to remote repo
+        if: steps.checkout-remote.outcome == 'success'
+        run: |
+          cd temp-repo
+          # 复制生成的 trial.cfg 到远程仓库根目录
+          rm -f trial.cfg
+          if [ -f ../trial.cfg ]; then
+            cp ../trial.cfg .
+            echo "Copied trial.cfg to remote repo."
+          fi
+
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
+          git add trial.cfg
+          if git diff --staged --quiet; then
+            echo "No changes to trial.cfg, skipping commit."
+          else
+            git commit -m "Update trial.cfg from list.py: $(date '+%Y-%m-%d %H:%M:%S')"
+            git push origin main
+            echo "✅ trial.cfg 已推送到远程仓库。"
+          fi
+
+      - name: Cleanup
+        if: always()
+        run: |
+          rm -rf temp-repo || true
+          echo "Cleanup complete."
+
+  auto-update:
+    runs-on: ubuntu-latest
+    needs: collect-list  # 依赖 collect-list，确保 trial.cfg 已更新到远程
+    timeout-minutes: 90
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    env:
+      TZ: Asia/Shanghai
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      DDAL_EMAIL: ${{ secrets.DDAL_EMAIL }}
+      DDAL_PASSWORD: ${{ secrets.DDAL_PASSWORD }}
+      REPO: ${{ secrets.REPO }}
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+
+    steps:
+      - name: 检出代码（当前仓库）
+        uses: actions/checkout@v4
+
+      - name: 设置 Python 环境
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: 安装依赖
+        run: pip install requests beautifulsoup4 ruamel.yaml json5 pyyaml
+
+      - name: Debug remote repo access
+        run: |
+          echo "REPO value: ${{ env.REPO }}"
+          git ls-remote https://x-access-token:${{ env.REPO_TOKEN }}@github.com/${{ env.REPO }}.git HEAD || echo "❌ ls-remote failed"
+
+      - name: Checkout remote repository (拉取最新的 trial.cfg)
+        id: checkout-remote
+        continue-on-error: true
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ env.REPO }}
+          token: ${{ env.REPO_TOKEN }}
+          path: temp-repo
+          ref: main
+          persist-credentials: true
+
+      - name: Check checkout status
+        if: steps.checkout-remote.outcome != 'success'
+        run: |
+          echo "❌ Checkout remote repo failed. Skipping auto-update."
+          exit 0
+
+      - name: Copy trial.cfg from remote to working dir
+        if: steps.checkout-remote.outcome == 'success'
+        run: |
+          if [ -f temp-repo/trial.cfg ]; then
+            cp temp-repo/trial.cfg .
+            echo "✅ 已从远程仓库拉取 trial.cfg。"
+          else
+            echo "❌ 远程仓库无 trial.cfg，跳过 get_trial.py。"
+            exit 0
+          fi
+
+      - name: Run get_trial.py (使用拉取的 trial.cfg)
+        if: steps.checkout-remote.outcome == 'success'
+        run: python get_trial.py --output-dir ./
+
+      - name: Prepare success domains for push
+        run: |
+          echo "成功域名文件: success_domains.txt 和 success_domains.json 已生成"
+          ls -la success_domains* || echo "No success files found"
+
+      - name: Push success domains to remote repo (output/data/)
+        if: steps.checkout-remote.outcome == 'success'
         run: |
           cd temp-repo
           TARGET_DIR="output/data"
           mkdir -p $TARGET_DIR
 
-          # Push base64 trial (原逻辑)
-          rm -f $TARGET_DIR/trial
-          if [ -f ../trial ]; then
-            cp ../trial $TARGET_DIR/trial
-          fi
-
-          # Push 成功域名列表（保护节点信息，只暴露域名）
+          # 只 push 成功域名列表（隐藏节点）
           rm -f $TARGET_DIR/success_domains.txt
           if [ -f ../success_domains.txt ]; then
-            cp ../success_domains.txt $TARGET_DIR/success_domains.txt
+            cp ../success_domains.txt $TARGET_DIR/
+            echo "Pushed success_domains.txt."
           fi
 
           rm -f $TARGET_DIR/success_domains.json
           if [ -f ../success_domains.json ]; then
-            cp ../success_domains.json $TARGET_DIR/success_domains.json
+            cp ../success_domains.json $TARGET_DIR/
+            echo "Pushed success_domains.json."
           fi
 
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
           git add $TARGET_DIR/
-          git commit -m "Auto update: $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-
-          git push || echo "No changes to push"
+          if git diff --staged --quiet; then
+            echo "No changes to success domains, skipping commit."
+          else
+            git commit -m "Auto update success domains: $(date '+%Y-%m-%d %H:%M:%S')"
+            git push origin main
+            echo "✅ 成功域名已推送到远程仓库。"
+          fi
 
       - name: Cleanup
+        if: always()
         run: |
-          rm -f trial success_domains.txt success_domains.json || true
+          rm -f trial.cfg success_domains.txt success_domains.json || true
           rm -rf temp-repo || true
-
-      - name: Commit local changes (if any)
-        id: commit
-        continue-on-error: true
-        run: |
-          git config user.email "actions@github.com"
-          git config user.name "GitHub Actions"
-          git add .
-          git commit -m "update $(date +%Y-%m-%d\" \"%H:%M:%S)" || echo "No local changes"
-          git pull --rebase || true
-
-      - name: Push local changes
-        if: ${{ steps.commit.outcome == 'success' }}
-        uses: ad-m/github-push-action@master
+          echo "Cleanup complete."
 
       - name: Run get_trial_update_url.py (if needed)
         if: always()
