--- a/.github/workflows/get_trial.yml
+++ b/.github/workflows/get_trial.yml
@@ -3,7 +3,7 @@ name: Collect List and Auto Update
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 18 * * *'
+    - cron: '0 */2 * * *'
 
 permissions: write-all
 
